# docs_scraper_mcp

./: .gitignore  LICENSE  README.md  menu_crawler.py  multi_url_crawler.py  pyproject.toml  requirements.txt  single_url_crawler.py  sitemap_crawler.py
.cursor/rules/: implementation-plan.mdc  mcp-development-protocol.mdc
src/docs_scraper/: __init__.py  cli.py  server.py
src/docs_scraper/crawlers/: __init__.py  menu_crawler.py  multi_url_crawler.py  single_url_crawler.py  sitemap_crawler.py
src/docs_scraper/utils/: __init__.py  html_parser.py  request_handler.py
tests/: conftest.py
tests/test_crawlers/: test_menu_crawler.py  test_multi_url_crawler.py  test_single_url_crawler.py  test_sitemap_crawler.py
tests/test_utils/: test_html_parser.py  test_request_handler.py
