[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docs_scraper"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
description = "A documentation scraping tool"
requires-python = ">=3.7"
dependencies = [
    "beautifulsoup4",
    "requests",
    "aiohttp",
    "lxml",
    "termcolor",
    "crawl4ai"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "aioresponses"
]

[project.scripts]
docs-scraper = "docs_scraper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["docs_scraper*"]
namespaces = false

[tool.hatch.build]
packages = ["src/docs_scraper"] 